--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   },
   "license": "MIT",
   "main": "lib/index.js",
+  "dependencies": {
+    "prop-types": "15.6.0"
+  },
   "devDependencies": {
     "babel-cli": "^6.24.0",
     "babel-core": "^6.24.0",
@@ -34,8 +37,7 @@
     "rimraf": "^2.6.1"
   },
   "peerDependencies": {
-    "react": "^15.0.0",
-    "react-dom": "^15.0.0"
+    "react": ">=15"
   },
   "prettier": {
     "useTabs": false,
